[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/achievementsIcon.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/settings.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/firstCoin.png" type="Texture" id=3]
[ext_resource path="res://scripts/MenuHUD.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/NerkoOnePlacesFont.tres" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 5 )

[node name="Panel" type="Panel"]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 0.1
margin_left = -38.0
margin_bottom = 3.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="TextureRect" parent="GridContainer"]
margin_right = 48.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="CoinLabel" type="Label" parent="GridContainer/Coin"]
anchor_left = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 52.0
margin_right = 56.0
margin_bottom = 74.0

[node name="Achievements" type="TextureButton" parent="GridContainer"]
margin_left = 60.0
margin_right = 108.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="VSeparator2" type="VSeparator" parent="GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 112.0
margin_right = 116.0
margin_bottom = 74.0

[node name="Settings" type="TextureButton" parent="GridContainer"]
margin_left = 120.0
margin_right = 168.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserNameLabel" type="Label" parent="."]
anchor_left = -1.0
margin_left = -6.29962
margin_top = 10.0794
margin_right = -16.2996
margin_bottom = 43.0794
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.141176, 0.494118, 0.54902, 1 )
text = "El PEPE"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GridContainer/Achievements" to="." method="_on_Achievements_pressed"]
[connection signal="pressed" from="GridContainer/Settings" to="." method="_on_Settings_pressed"]
